# analytix

./: .editorconfig  .gitignore  .readthedocs.yml  .sourcery.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-nox.txt  requirements-opt.txt  requirements-rtd.txt  requirements-test.txt  requirements.txt  setup.py
.github/: dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: 1-bug.md  2-feature.md  3-improvement.md  bug-report.yml  bug_report.md  feature-request.yml  something-could-be-improved.md  something-new.md  something-s-broken.md
.github/workflows/: check-dependencies.yml  check-min-supported-df-libs.yml  ci-checks.yml  ci-tests.yml  ci.yml  codeql-analysis.yml  publish-docs-v6.yml  publish-docs.yml  publish.yml  python-publish.yml  run-checks.yml  run-safety-check.yml  upload-binaries.yml
analytix/: __init__.py  __main__.py  abc.py  analytics.py  async_analytics.py  auth.py  client.py  data.py  errors.py  features.py  groups.py  iso.py  landing.html  mixins.py  oauth.py  oidc.py  packages.py  queries.py  report_types.py  reports.py  secrets.py  shard.py  tokens.py  types.py  utils.py  ux.py  warnings.py  webserver.py
analytix/analytics/: __init__.py  async_.py  sync.py
analytix/auth/: __init__.py  flow.py  landing.html  scopes.py  secrets.py  tokens.py  utils.py
analytix/data/: landing.html
analytix/experimental/: __init__.py  auth.py  client.py  errors.py  mixins.py  shard.py  types.py
analytix/groups/: __init__.py  groups.py
analytix/reports/: __init__.py  data.py  features.py  interfaces.py  plots.py  resources.py  response.py  types.py  types_deprecated.py
analytix/youtube/: __init__.py  abc.py  analytics.py  features.py  reports.py  service.py
docs/: abc.rst  api.rst  changelog.rst  conf.py  index.rst  requirements.txt
docs/api/: analytix.rst  async_analytics.rst  oauth.rst  secrets.rst  ux.rst
docs/app/: analytix.rst  yt-analytics.rst
docs/getting started/: 1-installation.md  2-googleapp.md
docs/guides/: console.rst  dimensions.md  (+14 more)
examples/: README.md  daily-views.py  monthly-likes.py  overview.py  overview28.py  overview_graphs.ipynb  overview_top_videos.py  revenue-ecdf.py
requirements/: arrow.txt  base.txt  dev.txt  df.txt  docs.txt  excel.txt  modin.txt  nox.txt  pandas.txt  plots.txt  polars.txt  pyarrow.txt  rtd.txt  types.txt
scripts/: generate_id_token_fixtures.py  get_token.py
search/: search_index.json
tests/: __init__.py  _test_shard.py  conftest.py  paths.py  test_analytics.py  test_async_analytics.py  test_auth.py  test_client.py  test_dataframe_ops.py  test_dimensions.py  test_factory_reports.py  test_filters.py  test_groups.py  test_io.py  test_metrics.py  test_mixins.py  test_oauth.py  test_oidc.py  test_queries.py  test_report_functionality.py  test_report_types.py  test_report_verification.py  test_reports.py  test_secrets.py  test_shard.py  test_sort_options.py  test_tokens.py  test_utils.py  test_youtube_analytics.py
(+127 files in other folders)
